--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -26,7 +26,7 @@
                 <option value="GenericResource">Generic Resource</option>
                 <option value="NetcdfResource">Multidimensional Space and Time Data Resource</option>
 {#                <option value="RasterResource">Geographic Raster Resource</option>#}
-                <option value="TimeSeriesResource">Time Series Resource</option>
+{#                <option value="TimeSeriesResource">Time Series Resource</option>#}
 {#                <option value="InstResource">RHESSys Instance Resource</option>#}
             </select>
         </div>
