--- a/hs_rhessys_inst_resource/templates/pages/runmodel.html
+++ b/hs_rhessys_inst_resource/templates/pages/runmodel.html
@@ -15,11 +15,29 @@
 
 <div class="row">
     <div class="col-md-12">{# <img src="/placeholder.png"></div> #}
-        <table class="table">
-            <tr><th>Resource ID</th><td>{{ resource_short_id }}</td></tr>
-	</table>
+
+    {% if not can_run %}
+    <p>Unable to run model.  Please ask the administrator to associated an execution profile with this model.</p>
+    {% else %}
+
+    <form action="/hs_rhessys_inst_resource/{{ resource_short_id }}/runmodel/" metho="POST">
+      {% csrf_token %}
+      <h3>New model run</h3>
+      {{ form }}
+      <br />
+      <input type="submit" class="btn btn-success" style="margin-top: 0.5em;" value="Run model"/>
+    </form>
+
+    <h3>Existing model runs</h3>
+    <table class="table table-striped table-hover">
+      
+    </table>
+
+    {% endif %}
     </div>
 </div>
+
+</form>
 
 {% block extra_js %}
     <script type="text/javascript">
