[#138] fix for issue#138

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -71,7 +71,7 @@
                         </form>
                    {% endif %}
                    <div>
-                       {% if metadata_status == "Incomplete" %}
+                       {% if metadata_status == "Insufficient to make public" %}
                             <table class="table table-condensed" style="margin-top: 2px; border: 2px solid red">
                                 <tr style="color: red"><td><h4>Data for the following required elements are missing:</h4></td></tr>
                                 {% if not abstract %}
