--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -849,10 +849,13 @@ table.table-plain {
     -webkit-border-radius: 4px 4px 0 0;
     -moz-border-radius: 4px 4px 0 0;
     border-radius: 4px 4px 0 0;
+    -webkit-box-shadow: inset 0 1px 0 #ffffff;
+    -moz-box-shadow: inset 0 1px 0 #ffffff;
+    box-shadow: inset 0 1px 0 #ffffff;
 }
 .tab-elements > .tabs-body{
+    max-height: 400px;
     border: 1px solid #ddd;
-    min-height: 300px;
     padding: 10px;
     overflow: auto;
 }
@@ -861,8 +864,11 @@ table.table-plain {
     border:0;
 }
 
-.division-title{
+.division-title {
     clear:left;
+    font-size: 20px;
+    font-weight: 500;
+    margin-left: 7px;
 }
 
 .label-file-name{
@@ -995,15 +1001,29 @@ a.tag:hover {
 }
 
 .user-thumbnail{
-    border: 1px solid #ddd;
-    height: 150px;
-    margin: 5px;
+    border: 1px solid #DDD;
     border-radius: 3px;
+    height: 170px;
+    margin: 5px;
     display: inline-block;
     float: left;
     padding: 10px;
     font-size: 12px;
-    box-shadow: 2px 2px 4px #EFEFEF;
+    -webkit-box-shadow: inset 0 1px 0 #ffffff;
+    -moz-box-shadow: inset 0 1px 0 #ffffff;
+    box-shadow: inset 0 1px 0 #ffffff;
+    box-shadow: 1px 1px 8px #DFDFDF;
+    color:#555;
+}
+
+.custom-well{
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
 }
 
 .user-thumbnail strong{
@@ -1020,10 +1040,11 @@ a.tag:hover {
 
 img.profile-picture {
     float: left;
-    height: 130px;
+    height: 150px;
     width: 150px;
     border: 0;
     margin-right:10px;
+    background-color:#ddd;
 }
 
 span.name-label{
@@ -1032,7 +1053,21 @@ span.name-label{
     display: table;
 }
 
+.tab-elements .table{
+    width:auto;
+}
 
+.tab-elements .table td, .tab-elements .table th{
+    border:0;
+}
+
+.tab-elements .nav-tabs>li>a {
+    border: 1px solid #ddd;
+}
+
+.tab-elements .nav-tabs>li.active>a {
+    border-bottom-color: transparent;
+}
 /* ===== Responsive CSS ===== */
 
 .navbar-inverse .navbar-toggle:hover,
