--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -56,50 +56,51 @@
         <div class="custom-well">
             {% block extra_content %}
             {% endblock %}
-
-            <table class="table-plain">
-                {% for f in cm.files.all %}
-                    {#======= Modal window begins =======#}
-                    <div class="modal fade" id="delete-resource-file-{{f.pk}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                      <div class="modal-dialog">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title">Confirm file deletion</h4>
-                          </div>
-                          <div class="modal-body">
-                              This will delete the file from the resource. Consider saving a copy if it is important to you.
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <a type="button" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/delete-resource-file/{{f.pk}}/">Delete</a>
+            <div class="table-container">
+                <table class="table-plain">
+                    {% for f in cm.files.all %}
+                        {#======= Modal window begins =======#}
+                        <div class="modal fade" id="delete-resource-file-{{f.pk}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                <h4 class="modal-title">Confirm file deletion</h4>
+                              </div>
+                              <div class="modal-body">
+                                  This will delete the file from the resource. Consider saving a copy if it is important to you.
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <a type="button" class="btn btn-danger" href="/hsapi/_internal/{{ cm.short_id }}/delete-resource-file/{{f.pk}}/">Delete</a>
+                              </div>
+                            </div>
                           </div>
                         </div>
-                      </div>
-                    </div>
-                    {#======= Modal window ends =======#}
+                        {#======= Modal window ends =======#}
 
-                    <tr>
-                        <td>
-                            <span class="glyphicon glyphicon-file file-icon"></span>
-                            <span>
-                                <span class="label-file-name">{{ f.resource_file.name|slice:"33:" }}</span>
-                                <p class="label-file-size">{{ f.resource_file.size|filesizeformat }}</p>
-                            </span>
-                        </td>
-        {#                    <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>#}
-                        <td>
-                            {% if page.perms.change %}
-                                <a href="{{ f.resource_file.url }}"><span data-toggle="modal" data-target="#delete-resource-file-{{f.pk}}" data-placement="auto" title="Delete" class="glyphicon glyphicon-remove-circle icon-button btn-remove"></span></a>
-                                <a href="{{ f.resource_file.url }}"><span data-toggle="tooltip" data-placement="auto" title="Download" class="glyphicon glyphicon-download icon-button btn-download"></span></a>
-                                {% if preview %}
-                                    <a href="{{ f.resource_file.url }}"><span data-toggle="tooltip" data-placement="auto" title="Preview" class="glyphicon glyphicon-eye-open icon-button"></span></a>
+                        <tr>
+                            <td>
+                                <span class="glyphicon glyphicon-file file-icon"></span>
+                                <span>
+                                    <span class="label-file-name">{{ f.resource_file.name|slice:"33:" }}</span>
+                                    <p class="label-file-size">{{ f.resource_file.size|filesizeformat }}</p>
+                                </span>
+                            </td>
+            {#                    <td>{% if preview %}<a class="btn btn-info btn-block" href="{{ preview }}">Preview</a>{% endif %}</td>#}
+                            <td>
+                                {% if page.perms.change %}
+                                    <a href="{{ f.resource_file.url }}"><span data-toggle="modal" data-target="#delete-resource-file-{{f.pk}}" data-placement="auto" title="Delete" class="glyphicon glyphicon-remove-circle icon-button btn-remove"></span></a>
+                                    <a href="{{ f.resource_file.url }}"><span data-toggle="tooltip" data-placement="auto" title="Download" class="glyphicon glyphicon-download icon-button btn-download"></span></a>
+                                    {% if preview %}
+                                        <a href="{{ f.resource_file.url }}"><span data-toggle="tooltip" data-placement="auto" title="Preview" class="glyphicon glyphicon-eye-open icon-button"></span></a>
+                                    {% endif %}
                                 {% endif %}
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
             <!-- Buttons -->
             {% for b in cm.bags.all %}
                 <a type="button" class="btn btn-default" href="{{ bag.bag.url }}">
