--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -873,6 +873,13 @@ table.table-plain tr:hover{
     font-size: 20px;
     font-weight: 500;
     margin-left: 7px;
+
+}
+
+.page-title{
+    font-weight: 500;
+    margin: 30px 0px;
+    margin-top: 0;
 }
 
 .label-file-name{
@@ -929,7 +936,6 @@ body > .container{
 }
 
 .abstract{
-    margin: 30px 0;
     line-height: 2;
     font-size: 16px;
 }
